// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterSort > applies correct icon classes 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-square-asterisk w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M12 8v8"
      />
      <path
        d="m8.5 14 7-4"
      />
      <path
        d="m8.5 10 7 4"
      />
    </svg>
    <span
      class=""
    >
      Recent
    </span>
  </p>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-flame w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
      />
    </svg>
    <span
      class=""
    >
      Popularity
    </span>
  </p>
</div>
`;

exports[`FilterSort > applies correct styling classes 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-square-asterisk w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M12 8v8"
    />
    <path
      d="m8.5 14 7-4"
    />
    <path
      d="m8.5 10 7 4"
    />
  </svg>
  <span
    class=""
  >
    Recent
  </span>
</p>
`;

exports[`FilterSort > applies correct styling classes 2`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-flame w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
    />
  </svg>
  <span
    class=""
  >
    Popularity
  </span>
</p>
`;

exports[`FilterSort > renders with correct icons 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-square-asterisk w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M12 8v8"
      />
      <path
        d="m8.5 14 7-4"
      />
      <path
        d="m8.5 10 7 4"
      />
    </svg>
    <span
      class=""
    >
      Recent
    </span>
  </p>
  <p
    class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-flame w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
      />
    </svg>
    <span
      class=""
    >
      Popularity
    </span>
  </p>
</div>
`;

exports[`FilterSort > renders with custom selected tab 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-flame w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
    />
  </svg>
  <span
    class=""
  >
    Popularity
  </span>
</p>
`;

exports[`FilterSort > renders with default selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-4 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-1"
    data-slot="filter-header"
    data-testid="filter-header"
  >
    <h2
      class="text-2xl text-muted-foreground font-light"
      data-testid="heading-2"
    >
      Sort
    </h2>
  </div>
  <div
    class="mx-auto w-full flex flex-col gap-2"
    data-slot="filter-list"
    data-testid="filter-list"
  >
    <p
      class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-square-asterisk w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M12 8v8"
        />
        <path
          d="m8.5 14 7-4"
        />
        <path
          d="m8.5 10 7 4"
        />
      </svg>
      <span
        class=""
      >
        Recent
      </span>
    </p>
    <p
      class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
        />
      </svg>
      <span
        class=""
      >
        Popularity
      </span>
    </p>
  </div>
</div>
`;

exports[`FilterSort > renders with different selected tabs 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-square-asterisk w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M12 8v8"
    />
    <path
      d="m8.5 14 7-4"
    />
    <path
      d="m8.5 10 7 4"
    />
  </svg>
  <span
    class=""
  >
    Recent
  </span>
</p>
`;

exports[`FilterSort > renders with different selected tabs 2`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-flame w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
    />
  </svg>
  <span
    class=""
  >
    Popularity
  </span>
</p>
`;

exports[`FilterSort > renders with different selected tabs 3`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-square-asterisk w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M12 8v8"
    />
    <path
      d="m8.5 14 7-4"
    />
    <path
      d="m8.5 10 7 4"
    />
  </svg>
  <span
    class=""
  >
    Recent
  </span>
</p>
`;

exports[`FilterSort > renders with different selected tabs 4`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-flame w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
    />
  </svg>
  <span
    class=""
  >
    Popularity
  </span>
</p>
`;

exports[`FilterSort > shows correct visual state for selected and unselected tabs 1`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-square-asterisk w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M12 8v8"
    />
    <path
      d="m8.5 14 7-4"
    />
    <path
      d="m8.5 10 7 4"
    />
  </svg>
  <span
    class=""
  >
    Recent
  </span>
</p>
`;

exports[`FilterSort > shows correct visual state for selected and unselected tabs 2`] = `
<p
  class="cursor-pointer flex gap-2 items-center text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-flame w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
    />
  </svg>
  <span
    class=""
  >
    Popularity
  </span>
</p>
`;
